tests/baselines/reference/typeReferenceDirectives11.errors.txt
/mod1.ts(1,17): error TS6131: Cannot compile modules using option 'outFile' unless the '--module' flag is 'amd' or 'system'.


==== /mod2.ts (0 errors) ====
    import {foo} from "./mod1";
    export const bar = foo();
    
==== /types/lib/index.d.ts (0 errors) ====
    interface Lib { x }
    
==== /mod1.ts (1 errors) ====
    export function foo(): Lib { return {x: 1} }
                    ~~~
!!! error TS6131: Cannot compile modules using option 'outFile' unless the '--module' flag is 'amd' or 'system'.
    